# psql

./: .gitignore  Cargo.toml  README.md  draw.js  index.html  schema.json  test.http
crates/psql-api/: Cargo.toml  README.md
crates/psql-api/src/: lib.rs
crates/psql-core/: Cargo.toml  README.md  schema.json
crates/psql-core/src/: parser.rs
crates/psql-core/src/http/: explore.rs  index.rs  output.rs  plan.rs
examples/: cli.rs  demo.sql  dyn.rs  http.rs  openapi.rs  plan.toml  relation.rs  schema.json  tables.sql  test.http
npm/: package-lock.json  package.json
npm/src/: index.js  types.js
sqls/: invalid.sql  tables.sql
src/: errors.rs  http.rs  lib.rs  main.rs  parser.rs  test.pest  token.rs
src/http/: index.html  index.rs  mod.rs  output.rs  plan.rs
