[package]
name = "psql"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
nom = "6"
sqlparser = "0.9"
getopts = "*"
log = "0.4"
openapiv3 = "0.5"

[dev-dependencies]
pretty_env_logger = "0.4"
indexmap = "1.7"
#serde = { version = "1", features = ["derive"] }
serde_json = "1"
